<resources>
    <string name="app_name">Attendance Offline</string>

    <string name="action_settings">Settings</string>


    <string name="app_title">MANTRA-MFS100-TEST</string>
    <string name="Init">INIT</string>
    <string name="UnInit">UNINIT</string>
    <string name="Start">START</string>
    <string name="Stop">STOP</string>
    <string name="ExtractISO">ISO(FMR)</string>
    <string name="ExtractWSQ">WSQ</string>
    <string name="MatchISO">MATCH ISO(FMR)</string>
    <string name="foorLoop">Init/Uninit</string>
    <string name="ClearLog">CLEAR LOG</string>
    <string name="SyncCapture">AUTO CAPTURE</string>

    <string-array name="MFS100Ver">
        <item>41</item>
        <item>31</item>
    </string-array>

    <string name="title_activity_preference">Preference</string>
</resources>
