<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".AttendanceNew" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="vertical"
        android:paddingTop="0dp" >

        <TextView
            android:id="@+id/lblTitle"
            style="@style/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/title"
            android:gravity="center"
            android:text="@string/app_title"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="vertical"
        android:paddingTop="5dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="top|left"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imgFinger"
                android:layout_width="120dp"
                android:layout_height="150dp"
                android:background="@drawable/imagefinger"
                android:src="@drawable/finger" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|left"
                android:orientation="vertical"
                android:paddingLeft="5dp" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="top|left"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/btnInit"
                        style="@style/button"
                        android:background="@drawable/button"
                        android:onClick="onControlClicked"
                        android:text="@string/Init" />

                    <Button
                        android:id="@+id/btnUninit"
                        style="@style/button"
                        android:background="@drawable/button"
                        android:onClick="onControlClicked"
                        android:text="@string/UnInit" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="top|left"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/btnStartCapture"
                        style="@style/button"
                        android:background="@drawable/button"
                        android:onClick="onControlClicked"
                        android:text="@string/Start" />

                    <Button
                        android:id="@+id/btnStopCapture"
                        style="@style/button"
                        android:background="@drawable/button"
                        android:onClick="onControlClicked"
                        android:text="@string/Stop" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnSyncCapture"
                    style="@style/buttonbig"
                    android:background="@drawable/button"
                    android:onClick="onControlClicked"
                    android:text="@string/SyncCapture" />

                <!-- <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="top|left"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/btnExtractISOTemplate"
                        style="@style/button"
                        android:background="@drawable/button"
                        android:onClick="onControlClicked"
                        android:text="@string/ExtractISO" />

                    <Button
                        android:id="@+id/btnExtractWSQ"
                        style="@style/button"
                        android:background="@drawable/button"
                        android:onClick="onControlClicked"
                        android:text="@string/ExtractWSQ" />
                </LinearLayout> -->

                <Button
                    android:id="@+id/btnMatchISOTemplate"
                    style="@style/buttonbig"
                    android:background="@drawable/button"
                    android:onClick="onControlClicked"
                    android:text="@string/MatchISO" />
                
                <Button
                    android:id="@+id/btnForLoop"
                    style="@style/buttonbig"
                    android:background="@drawable/button"
                    android:onClick="onControlClicked"
                    android:text="@string/foorLoop"
                    android:visibility="gone" />
                
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical"
        android:paddingBottom="3dp"
        android:paddingTop="5dp" >

        <TextView
            android:id="@+id/lblMessage"
            style="@style/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/message"
            android:gravity="center"
            android:text=""
            android:textSize="15dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ed_match_mobNo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="Enter Mobile Number"
            android:textSize="25sp"
            android:gravity="center"
            android:digits="0123456789+"
            android:textColor="@color/EditTextLabelsColor"
            android:textCursorDrawable="@drawable/red_cursor"
            android:singleLine="true"
            android:maxLines="1"
            android:inputType="phone"
            android:maxLength="10"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text_red"/>

        <TextView
            android:id="@+id/txtMatch"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="20sp"
            android:text=""
            android:textColor="@color/EditTextLabelsColor"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"/>

        <EditText
            android:id="@+id/txtEventLog"
            style="@style/message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".70"
            android:background="@drawable/message"
            android:gravity="top|left"
            android:inputType="textMultiLine"
            android:text=""
            android:textSize="14dp"
            android:focusable="false" 
            android:padding="5dp"
            android:focusableInTouchMode="false">
        </EditText>

        <Button
            android:id="@+id/btnClearLog"
            style="@style/buttonfull"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:onClick="onControlClicked"
            android:text="@string/ClearLog" />
    </LinearLayout>

</LinearLayout>